2003-03-23  Joseph Valenzuela  <jvalenzu@formosa.infinite-monkeys.org>

	* src/al_source.c:
	Sunil's updated patch

2003-03-21  Joseph Valenzuela  <jvalenzu@formosa.infinite-monkeys.org>

	* src/al_source.c
	queueing pizzatch

2003-01-13  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* al/aluttypes.h
	* linux/include/al/alexttypes.h
	Added AL_PROVIDES_ALUT and LAL_OPENAL defines.

	* openal.spec
	added file

	* Changelog
	Removed "formosa." from my email

	* src/arch/morphos/morphos_dispatcher.c
	* src/arch/morphos/morphos_dispatcher.h
	* src/arch/morphos/morphos_native.c
	* src/arch/morphos/morphos_native.h
	* src/mutex/morphosmutex.c
	* src/mutex/morphosmutex.h
	* src/threads/morphosthreads.c
	* src/threads/morphosthreads.h
	Added Ruediger Hanke <tomjoad@muenster.de>'s MorphOS files.
	
2003-01-06  Erik Greenwald <erik@smluc.org> <erik@math.smsu.edu>

	* src/arch/bsd/bsd_dsp.c
	* src/arch/bsd/bsd_dsp.h
	Fixes for FreeBSD 4.7 (-stable)

2003-01-02  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* src/arch/linux/lin_dsp.c
	Fix to try /dev/sound/dsp as well as /dev/dsp.  Thanks to
	Sebastian Kapfer for that.

	* test/.cvsignore
	* test/testattributes.c
	* test/Makefile.in
	Added attribute testing

	* src/al_types.h
	Added space for flag saving, context/device association.

	* src/alc/alc_context.c
	* src/alc/alc_device.c
	* src/alc/alc_device.h
	Context attribute management

	* src/al_source.c
	Addition queue fixes.

2002-12-30  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* openal/linux/src/al_mixer.c
	* openal/linux/src/al_source.c
	Fix assertions for queue mixing, not done yet.


2002-12-17  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>
	* src/al_queue.c
	* src/al_mixer.c
        * src/al_source.c
        * src/al_source.h
	Re-added Zoltan Ponekker's patch to fix queue looping.
	
2002-12-04  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* src/al_filter.c
	Added John Quigley's change to queue gain stuff.

	* src/al_queue.c